--- a/JAVA/testFX/src/main/resources/com/sio/testfx/primary.fxml
+++ b/JAVA/testFX/src/main/resources/com/sio/testfx/primary.fxml
@@ -6,23 +6,23 @@
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="332.0" prefWidth="330.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.sio.testfx.PrimaryController">
    <children>
-      <Button fx:id="deux" layoutX="111.0" layoutY="188.0" mnemonicParsing="false" onAction="#display" prefHeight="25.0" prefWidth="45.0" text="2" />
-      <Button fx:id="quatre" layoutX="40.0" layoutY="146.0" mnemonicParsing="false" onAction="#display" prefHeight="25.0" prefWidth="45.0" text="4" />
-      <Button fx:id="huit" layoutX="111.0" layoutY="107.0" mnemonicParsing="false" onAction="#display" prefHeight="25.0" prefWidth="45.0" text="8" />
-      <Button fx:id="six" layoutX="179.0" layoutY="146.0" mnemonicParsing="false" onAction="#display" prefHeight="25.0" prefWidth="45.0" text="6" />
-      <Button fx:id="cinq" layoutX="111.0" layoutY="146.0" mnemonicParsing="false" onAction="#display" prefHeight="25.0" prefWidth="45.0" text="5" />
-      <Button fx:id="trois" layoutX="179.0" layoutY="188.0" mnemonicParsing="false" onAction="#display" prefHeight="25.0" prefWidth="45.0" text="3" />
-      <Button fx:id="sept" layoutX="40.0" layoutY="107.0" mnemonicParsing="false" onAction="#display" prefHeight="25.0" prefWidth="45.0" text="7" />
-      <Button fx:id="point" layoutX="179.0" layoutY="228.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="45.0" text="." />
-      <Button fx:id="neuf" layoutX="179.0" layoutY="107.0" mnemonicParsing="false" onAction="#display" prefHeight="25.0" prefWidth="45.0" text="9" />
-      <Button fx:id="diviser" layoutX="40.0" layoutY="228.0" mnemonicParsing="false" onAction="#display" prefHeight="25.0" prefWidth="45.0" text="\%" />
-      <Button fx:id="un" layoutX="40.0" layoutY="188.0" mnemonicParsing="false" onAction="#display" prefHeight="25.0" prefWidth="45.0" text="1" />
-      <Button fx:id="zero" layoutX="111.0" layoutY="228.0" mnemonicParsing="false" onAction="#display" prefHeight="25.0" prefWidth="45.0" text="0" />
-      <Button fx:id="plus" layoutX="249.0" layoutY="107.0" mnemonicParsing="false" onAction="#display" prefHeight="25.0" prefWidth="45.0" text="+" />
-      <Button fx:id="egal" layoutX="249.0" layoutY="228.0" mnemonicParsing="false" onAction="#display" prefHeight="25.0" prefWidth="45.0" text="=" />
-      <Button fx:id="moins" layoutX="249.0" layoutY="149.0" mnemonicParsing="false" onAction="#display" prefHeight="25.0" prefWidth="45.0" text="-" />
-      <Button fx:id="delete" layoutX="143.0" layoutY="266.0" mnemonicParsing="false" onAction="#display" prefHeight="25.0" prefWidth="45.0" text="C" />
-      <Button fx:id="multiplier" layoutX="249.0" layoutY="188.0" mnemonicParsing="false" onAction="#display" prefHeight="25.0" prefWidth="45.0" text="*" />
-      <Label fx:id="resultat" layoutX="25.0" layoutY="30.0" prefHeight="56.0" prefWidth="285.0" textFill="#0a0909" />
+      <Button layoutX="111.0" layoutY="188.0" mnemonicParsing="false" onAction="#chiffres" prefHeight="25.0" prefWidth="45.0" text="2" />
+      <Button layoutX="40.0" layoutY="146.0" mnemonicParsing="false" onAction="#chiffres" prefHeight="25.0" prefWidth="45.0" text="4" />
+      <Button layoutX="111.0" layoutY="107.0" mnemonicParsing="false" onAction="#chiffres" prefHeight="25.0" prefWidth="45.0" text="8" />
+      <Button layoutX="179.0" layoutY="146.0" mnemonicParsing="false" onAction="#chiffres" prefHeight="25.0" prefWidth="45.0" text="6" />
+      <Button layoutX="111.0" layoutY="146.0" mnemonicParsing="false" onAction="#chiffres" prefHeight="25.0" prefWidth="45.0" text="5" />
+      <Button layoutX="179.0" layoutY="188.0" mnemonicParsing="false" onAction="#chiffres" prefHeight="25.0" prefWidth="45.0" text="3" />
+      <Button layoutX="40.0" layoutY="107.0" mnemonicParsing="false" onAction="#chiffres" prefHeight="25.0" prefWidth="45.0" text="7" />
+      <Button layoutX="179.0" layoutY="228.0" mnemonicParsing="false" onAction="#chiffres" prefHeight="25.0" prefWidth="45.0" text="." />
+      <Button layoutX="179.0" layoutY="107.0" mnemonicParsing="false" onAction="#chiffres" prefHeight="25.0" prefWidth="45.0" text="9" />
+      <Button fx:id="diviser" layoutX="40.0" layoutY="228.0" mnemonicParsing="false" onAction="#signes" prefHeight="25.0" prefWidth="45.0" text="/" />
+      <Button layoutX="40.0" layoutY="188.0" mnemonicParsing="false" onAction="#chiffres" prefHeight="25.0" prefWidth="45.0" text="1" />
+      <Button layoutX="111.0" layoutY="228.0" mnemonicParsing="false" onAction="#chiffres" prefHeight="25.0" prefWidth="45.0" text="0" />
+      <Button layoutX="249.0" layoutY="107.0" mnemonicParsing="false" onAction="#signes" prefHeight="25.0" prefWidth="45.0" text="+" />
+      <Button layoutX="249.0" layoutY="228.0" mnemonicParsing="false" onAction="#egal" prefHeight="25.0" prefWidth="45.0" text="=" />
+      <Button fx:id="moins" layoutX="249.0" layoutY="149.0" mnemonicParsing="false" onAction="#signes" prefHeight="25.0" prefWidth="45.0" text="-" />
+      <Button layoutX="143.0" layoutY="266.0" mnemonicParsing="false" onAction="#delete" prefHeight="25.0" prefWidth="45.0" text="C" />
+      <Button fx:id="multiplier" layoutX="249.0" layoutY="188.0" mnemonicParsing="false" onAction="#signes" prefHeight="25.0" prefWidth="45.0" text="*" />
+      <Label fx:id="affichage" layoutX="25.0" layoutY="30.0" prefHeight="56.0" prefWidth="285.0" textFill="#0a0909" />
    </children>
 </Pane>
